Fix contact overflow

--- a/stylesheets/components/_contact.scss
+++ b/stylesheets/components/_contact.scss
@@ -3,8 +3,8 @@
   height: 100vh;
   margin-top: 25rem;
   padding: 0 2rem;
-  padding-top: 5rem;
-  // overflow-x: hidden;
+  // padding-top: 5rem;
+  // overflow-y: auto;
   flex-direction: column;
   justify-content: center;
   // align-items: center;
@@ -15,6 +15,9 @@
     }
     @media (max-width: $large) {
       font-size: 2rem;
+    }
+    @media (max-width: $small) {
+      // margin-top: 7rem;
     }
     &::after {
       content: '';
@@ -34,6 +37,9 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    @media (max-width: $small) {
+      display: block;
+    }
   }
   .form {
     flex: 2;
@@ -41,7 +47,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    padding-top: 1rem;
+    // padding-top: 1rem;
     align-items: center;
     label {
       margin-top: 2rem;
@@ -50,6 +56,9 @@
       }
     }
     input {
+      @media (max-width: $small) {
+        padding: 1.5rem;
+      }
       margin-top: 1rem;
       height: 1rem;
       width: 70%;
@@ -62,6 +71,10 @@
       margin-top: 3rem;
     }
     .msg-input {
+      @media (max-width: $small) {
+        padding: 1rem;
+        height: 6rem;
+      }
       height: 10rem;
     }
   }
